--- a/.env
+++ b/.env
@@ -10,4 +10,9 @@ DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
 TWILIO_SID=AC4919ba1688bcd3efd434d9abd276f655
 TWILIO_TOKEN=ffddfbc87b902124234664bf85d5d25b
 TWILIO_MS_SID=MGe83a6e4d95d4233e482df4fa74901adc
-MY_PHONE="+821051171912"
+MY_PHONE=+821051171912
+
+MG_DOMAIN=sandbox54f79c62f02c49a2a72d1559153f0ce9.mailgun.org
+MG_APIKEY=00ed1b383698c3e3798c73e63c506227-53ce4923-a56c0e39
+MAILGUN_EMAIL=carrotmarket@sandbox54f79c62f02c49a2a72d1559153f0ce9.mailgun.org
+MAILGUN_PW=772772d4d537c8adce13ba0beef5ff88-4f207195-6d9e434a
