--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/mailgun-js": "^0.22.12",
+    "mailgun-js": "^0.22.0",
+    "mailgun.js": "^7.0.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
