--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "iron-session": "^6.1.3",
     "mailgun-js": "^0.6.7",
     "mailgun.js": "^7.0.2",
+    "moment": "^2.29.3",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
