--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://127.0.0.1:3306/carrot-market"
+DATABASE_URL="mysql://127.0.0.1:3306/carrot-market?connection_limit=500&pool_timeout=600"
 TWILIO_SID=AC4919ba1688bcd3efd434d9abd276f655
 TWILIO_TOKEN=ffddfbc87b902124234664bf85d5d25b
 TWILIO_MS_SID=MGe83a6e4d95d4233e482df4fa74901adc
