--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prisma": "^3.15.2",
     "tailwindcss": "^3.1.3",
     "typescript": "4.7.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
