220704_CLOUDFLARE_IMG_FIN

--- a/.env
+++ b/.env
@@ -16,5 +16,7 @@ MG_DOMAIN=sandbox54f79c62f02c49a2a72d1559153f0ce9.mailgun.org
 MG_APIKEY=00ed1b383698c3e3798c73e63c506227-53ce4923-a56c0e39
 MAILGUN_EMAIL=carrotmarket@sandbox54f79c62f02c49a2a72d1559153f0ce9.mailgun.org
 MAILGUN_PW=772772d4d537c8adce13ba0beef5ff88-4f207195-6d9e434a
+CF_ACCOUNT_ID=faf91a38ab2affcc594bf2d148b3b684
+CF_TOKEN=yvZCTzmwVSnBr2d3hXiQHA8ArD9rHtD0mrdA2vRt
 
 COOKIE_PASSWORD=cWh^zkGFv_hf-ttYJq?gXXE92+f#nk_e
