--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^3.15.2",
     "@tailwindcss/forms": "^0.5.2",
     "@types/mailgun-js": "^0.22.12",
+    "framer-motion": "^6.4.2",
     "iron-session": "^6.1.3",
     "mailgun-js": "^0.6.7",
     "mailgun.js": "^7.0.2",
